searcher field fact_names css overflow fix

--- a/static/searcher/searcher.css
+++ b/static/searcher/searcher.css
@@ -168,7 +168,7 @@ textarea {
 }
 
 .list-group-item {
-  min-width: 120%;
+  min-width: 100%;
   display: inline-block;
   padding: 5px;
 }
